0.4.0 - currently working on
- [#1382] Feature: Testing framework: add sorting to created relations
- [#1400] Fix: Correct a few typos
- [#795] Fix: Unclosed markers wreck everything
- [#1399] Fix: testingframework::createRecords must check that the UID is not set
- [#1395] Fix: Increase the delta in the timer unit tests
- [#1383] Fix: Performance issue with the cleanUp() method in the testing framework
- [#1385] Fix: Permanently hiding subparts is broken
- [#1357] Fix: Unit test fails: testStatisticsForDefaultBucket
- [#1381] Change: Change the way the CSS file is included
- [#1132] Fix: Retrieving a hidden subpart should return an empty string
- [#796] Fix: setSubpart is broken
- [#1140] Fix: The prefix option for markers and subparts is broken
- [#1139] Fix: Hiding more than one subpart at a time fails
- [#1345] Feature: Provide access to the templating functions in BE mode
- [#1349] Fix: Fixed handling of m:n tables regarding reset auto-increment index in the testing framework
- [#1026] Feature: Add a function "checkIfPositiveIntegerOrZero" to the configcheck
- [#1046] Feature: Add a function "checkIfIntegerInRange" to the configcheck
- [#1334] Fix: Typo in the subpart names in the unit tests
- [#1237] Feature: Added a testing framework that creates dummy records for unit tests
- [#1269] Feature: Add global function "oB" for "openBucket" and "pB" for "returnToPreviousBucket"
- [#1268] Feature: Add a function "returnToPreviousBucket"
- [#636] Change: Remove surplus empty parameters from exec_SELECTquery calls, patch by Saskia Metzler
- [#1130] Feature: Add unit tests for the timer class
- [#612] Code cleanup
- [#1091] Feature: Add unit tests for the templating stuff
- [#1102] Feature: Add unit tests for the salutation switching and fix any found bugs
- [#773] Change: Make our enableFields() wrapper use $GLOBALS['TSFE'] and a singleton cache
- [#1098] Change: Improve some function names
- [#3] Fix: Allow marker names to be the prefix of others